--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,6 @@
 <div class= "hero-unit"
 	<h1>Home </h1>
-	<p>get to this later</p>
-	<p>
-		You found the 
-		<%= link_to "Sign up", "wwww.globalcitizen.org", class:"btn btn-primary btn large"%>
-	</p>
+	 <p>
+            <%= link_to "Sign Up Now!", new_user_registration_path, class: "btn btn-primary btn-large" %>
+        </p>
 </div>
