--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,12 @@
 	<body>
 
 		<%= render 'layouts/header' %>
+
 		<div class="container">
-		<%= yield %>
+            <% flash.each do |name, msg| %>
+                <%= content_tag(:div, msg, class: "alert alert-#{name}") %>
+            <% end %>
+            <%= yield %>
 
 		<%= render 'layouts/footer' %>
 
